LPS-56529 Convert usages of primitive wrappers